[tool.poetry]
name = "torch_model"
version = "0.1.0"
description = ""
authors = ["ldquan1996 <luongdoanhquan1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
